--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body, html {
+body, html { 
   width: 100%;
   height: 100%;
   font-family: Apple Chancery, cursive;
@@ -46,6 +46,24 @@ img:hover {
   background-color: #dd4444;
 }
 
-/* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
-/* create your tile classes! we recommend .small .med .large */
+.small {
+  width: 100%;
+  height: 100%;
+}
+
+.medium {
+  width: 203.5%;
+  height: 203.5%;
+}
+
+.large {
+  width: 303%;
+  height: 303%;
+}
+
+
+.column {
+  width: 30%;
+  display: inline-block;
+} 
