--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,25 @@ img:hover {
   background-color: #dd4444;
 }
 
+.column {
+  display: inline-block;
+  width: 30%;
+}
+
+.small {
+  height: 100%;
+  width: 100%;
+}
+
+.med {
+  height: 201.5%;
+  width: 201.5%;
+}
+
+.large {
+  height: 303%;
+  width: 303%;
+}
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
 /* create your tile classes! we recommend .small .med .large */
